[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmee"
version = "0.1.0"
description = "A recursive folder tree printer"
authors = [{name = "Edward"}]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
tmee = "main:main"

[tool.setuptools]
py-modules = ["main"]